webkit-scrollbar to fix css issue

--- a/4-natours/public/css/style.css
+++ b/4-natours/public/css/style.css
@@ -1323,3 +1323,8 @@ body {
   -webkit-transform: translateY(-2px);
   transform: translateY(-2px);
 }
+
+::-webkit-scrollbar {
+  width: 0px; 
+  background: transparent; 
+}
